# pdfviewer

./: .gitignore  .krazy  CMakeLists.txt  Changelog  HACKING  INSTALL  README  README.md  TODO  amkhlv_README  pdfviewer-standalone.pro  pdfviewer.pro
app/: CMakeLists.txt  INSTALL  LICENSE.GPL2  LICENSE.GPL3  README  app-standalone.pro  app.pro  pdfviewer-qdbus.sh
app/cmake/modules/: PdfViewerCPackOptions.cmake  PdfViewerConfig.cmake
app/data/: CMakeLists.txt  data.pri  pdfviewer.desktop
app/qmake/: pdfviewerconfig.pri  pdfviewerdefaults.pri
app/src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  abstractinfodock.cpp  abstractinfodock.h  configdialog.cpp  configdialog.h  configdialog.ui  documentobserver.cpp  documentobserver.h  embeddedfilesdock.cpp  embeddedfilesdock.h  findwidget.h  fontsdock.cpp  fontsdock.h  infodock.cpp  infodock.h  label.cpp  label.h  main.cpp  metadatadock.cpp  metadatadock.h  optcontentdock.cpp  optcontentdock.h  pdfviewer.qrc  pdfviewer.xml  pdfviewer_adaptor.cpp  pdfviewer_adaptor.h  pdfviewer_interface.cpp  pdfviewer_interface.h  permissionsdock.cpp  permissionsdock.h  presentationwidget.cpp  presentationwidget.h  src-standalone.pri  src.pri  thumbnailsdock.cpp  thumbnailsdock.h  tocdock.cpp  tocdock.h  (+2 more)
app/src/shortcuthandler/: shortcutconfigdialog.cpp  shortcutconfigdialog.h  shortcutconfigwidget.cpp  shortcutconfigwidget.h  shortcutconfigwidget.ui  shortcuthandler.cpp  shortcuthandler.h
app/src/utils/: gotopageaction.cpp  gotopageaction.h  messagebox.cpp  messagebox.h  recentfilesaction.cpp  recentfilesaction.h
app/translations/: CMakeLists.txt  pdfviewer_fr.ts  translations-standalone.pri  translations.pri
app/win32/: README.txt  pdfviewer.nsi  pdfviewer.rc  pdfviewer2.nsi  win32.pri
lib/: CMakeLists.txt  INSTALL  LICENSE.GPL2  README  lib.pro
lib/cmake/modules/: FindPdfView.cmake  PdfViewLibCPackOptions.cmake  PdfViewLibConfig.cmake  pdfviewlib_cmake_uninstall.cmake.in
lib/qmake/: pdfviewlibconfig.pri  pdfviewlibdefaults.pri
lib/src/: CMakeLists.txt  actionhandler.cpp  actionhandler.h  pdfview.cpp  pdfview.h  printhandler.cpp  src.pri
lib/src/utils/: bookmarkshandler.cpp  bookmarkshandler.h  selectaction.cpp  selectpageaction.cpp
lib/translations/: CMakeLists.txt  pdfviewlib_fr.ts  translations.pri
qtbuild/: amkhlv_build.sh
